--- a/Js.conf
+++ b/Js.conf
@@ -67,16 +67,8 @@ https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-respo
 # 大片-视频编辑器 VIP
 ^https?:\/\/api\.vnision\.com\/v1\/(users\/|banners) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/dapian.js
 
-#TikTok解锁封区去水印(根据需求 复制到本地取消注释)
-
-#(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
-
-#(?<=(carrier|account|sys|sim)_region=)CN url 307 JP
-
-#美区
-#(?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 14.0.0
-#港区
-#(?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.4.0
+# 南瓜电影4.7.3版 解锁VIP
+^https:\/\/(p\.doras\.api\.vcinema\.cn|pay\.guoing\.com)\/(v5\.0\/user\/\d+$|d\/user\/get_user_info) url script-response-body nzw9314/NobyDa/Surge/JS/ngdy.js
 
 # 91短视频
 ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/91.js
